# gscam2

./: CMakeLists.txt  Dockerfile  README.md  package.xml  workspace.repos
.github/workflows/: build_test.yml
cfg/: my_camera.ini  params.yaml  workaround_params.yaml
docker/eloquent/: Dockerfile  README.md
docker/foxy/: Dockerfile  README.md
include/gscam/: gscam_node.hpp  subscriber_node.hpp
include/gscam2/: context_macros.hpp  gscam_node.hpp  subscriber_node.hpp
launch/: composition_launch.py  container_param_launch.py  node_param_launch.py  parameters_launch.py  republish_launch.py  test_launch.py
src/: gscam_main.cpp  gscam_node.cpp  ipc_test_main.cpp  subscriber_node.cpp
test/: smoke_test.cpp
