<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>gscam2</name>
    <version>0.0.2</version>
    <description>
        ROS2 camera driver built around the GStreamer pipeline
        Port of https://github.com/ros-drivers/gscam
    </description>

    <maintainer email="clyde@mcqueen.net">Clyde McQueen (ROS2)</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/clydemcqueen/gscam2.git</url>
    <url type="bugtracker">https://github.com/clydemcqueen/gscam2/issues</url>

    <author email="jbo@jhu.edu">Jonathan Bohren</author>
    <author email="tjay@cs.brown.edu">Graylin Trevor Jay</author>
    <author email="chriscrick@cs.brown.edu">Christopher Crick</author>
    <author email="clyde@mcqueen.net">Clyde McQueen</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>

    <!-- Original gscam didn't / doesn't include copyright headers, ignore for now
    <test_depend>ament_cmake_copyright</test_depend>
    -->

    <!-- Also checks for copyright
    <test_depend>ament_cmake_cpplint</test_depend>
    -->

    <test_depend>ament_cmake_cppcheck</test_depend>
    <test_depend>ament_cmake_flake8</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>
    <test_depend>ament_cmake_pep257</test_depend>
    <test_depend>ament_cmake_uncrustify</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>

    <depend>camera_calibration_parsers</depend>
    <depend>camera_info_manager</depend>
    <depend>class_loader</depend>
    <depend>cv_bridge</depend>
    <depend>libgstreamer1.0-dev</depend>
    <depend>libgstreamer-plugins-base1.0-dev</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>rclpy</depend>
    <depend>ros2_shared</depend>
    <depend>sensor_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>

